--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,1 +1,31 @@
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nodejs-app-deployment
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: sample-app
+  template:
+    metadata:
+      labels:
+        app: sample-app
+    spec:
+      containers:
+      - name: sample-app
+        image: 457271242919.dkr.ecr.ap-south-1.amazonaws.com/my-repo:latest
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sample-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: sample-app
+  ports:
+    - port: 80
+      targetPort: 80
